duniverse/base_quickcheck.v0.12.1/ppx_quickcheck/test/toplevel/errors.mlt
type abstract [@@deriving quickcheck];;
[%%expect {|
Line _, characters 0-37:
Error: ppx_quickcheck: unsupported: abstract type
|}];;

type recursive = Leaf | Node of recursive * recursive [@@deriving quickcheck];;
[%%expect {|
Line _, characters 0-77:
Error: ppx_quickcheck: unsupported: recursive type
|}];;

type gadt = GADT : 'a -> gadt [@@deriving quickcheck];;
[%%expect {|
Line _, characters 12-29:
Error: ppx_quickcheck: unsupported: GADT
|}];;

type variant_gt = [> `tag] [@@deriving quickcheck];;
[%%expect {|
Line _, characters 18-26:
Error: ppx_quickcheck: unsupported: polymorphic variant type with [>]
|}];;

type variant_lt = [< `tag] [@@deriving quickcheck];;
[%%expect {|
Line _, characters 18-26:
Error: ppx_quickcheck: unsupported: polymorphic variant type with [<]
|}];;

type record_mutable = { pure : int; mutable impure : int } [@@deriving quickcheck];;
[%%expect {|
Line _, characters 36-56:
Error: ppx_quickcheck: unsupported: mutable record field
|}];;

type ('a, 'b) fn = 'a -> 'b
[@@deriving quickcheck]
[%%expect {|
Line _, characters 19-21:
Error: ppx_quickcheck: invalid syntax: misuse of type variable 'a: would confuse observer with generator in generated code; could be due to a missing or incorrect covariance/contravariance annotation
|}];;

let _ = [%quickcheck.generator: [%arbitrary.tag? ()]]
[%%expect {|
Line _, characters 32-52:
Error: ppx_quickcheck: unsupported: uknown extension: arbitrary.tag
|}];;

let _ = [%quickcheck.observer: [%custom 1;; 2]]
[%%expect {|
Line _, characters 31-46:
Error: ppx_quickcheck: invalid syntax: [%custom] extension expects a single expression as its payload
|}];;

let _ = [%quickcheck.shrinker: unit * [%custom: bool] * char]
[%%expect {|
Line _, characters 38-53:
Error: ppx_quickcheck: invalid syntax: [%custom] extension expects a single expression as its payload
|}];;

let _ = [%quickcheck.generator: _ list]
[%%expect {|
Line _, characters 32-33:
Error: ppx_quickcheck: unsupported: wildcard type
|}];;
